--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -63,8 +63,10 @@
     <Content Include="packages.config" />
     <Compile Include="Logger.fs" />
     <Compile Include="RunDefinition.fs" />
-    <Compile Include="RunExecutor.fs" />
+    <Compile Include="StaleMessageIgnoringAgent.fs" />
+    <Compile Include="RunExecutor.PathHelpers.fs" />
     <Compile Include="RunStepFuncWrappers.fs" />
+    <Compile Include="RunExecutor.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Diagnostics.Tracing.EventSource">
