--- a/Hosts/VS/CommonUI/CommonUI.csproj
+++ b/Hosts/VS/CommonUI/CommonUI.csproj
@@ -116,10 +116,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoveringTests\MainUserControl1.xaml.cs">
+      <DependentUpon>MainUserControl1.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CoveringTests\MainUserControl.xaml.cs">
       <DependentUpon>MainUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="CoveringTests\ViewModel\CoveringTestViewModel.cs" />
+    <Compile Include="CoveringTests\ViewModel\MainViewModel1.cs" />
     <Compile Include="CoveringTests\ViewModel\MainViewModel.designtime.cs">
       <DependentUpon>MainViewModel.cs</DependentUpon>
     </Compile>
@@ -149,6 +153,10 @@
     <Compile Include="CoveringTests\ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="CoveringTests\MainUserControl1.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="CoveringTests\MainUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
