--- a/Hosts/VS/CommonUI/CommonUI.csproj
+++ b/Hosts/VS/CommonUI/CommonUI.csproj
@@ -119,20 +119,10 @@
     <Compile Include="CoveringTests\MainUserControl1.xaml.cs">
       <DependentUpon>MainUserControl1.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CoveringTests\MainUserControl.xaml.cs">
-      <DependentUpon>MainUserControl.xaml</DependentUpon>
-    </Compile>
     <Compile Include="CoveringTests\ViewModel\CoveringTestViewModel.cs" />
+    <Compile Include="CoveringTests\ViewModel\MainViewModel.GlyphInfo.cs" />
+    <Compile Include="CoveringTests\ViewModel\MainViewModel.HostIdeActions.cs" />
     <Compile Include="CoveringTests\ViewModel\MainViewModel1.cs" />
-    <Compile Include="CoveringTests\ViewModel\MainViewModel.designtime.cs">
-      <DependentUpon>MainViewModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CoveringTests\ViewModel\MainViewModel.GlyphInfo.cs">
-      <DependentUpon>MainViewModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CoveringTests\ViewModel\MainViewModel.HostIdeActions.cs">
-      <DependentUpon>MainViewModel.cs</DependentUpon>
-    </Compile>
     <Compile Include="CoveringTests\ViewModel\ViewModelLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusBar\RunStateToIconTextConverter.cs" />
@@ -150,16 +140,11 @@
     <Compile Include="TestCode\FakeTextSnapshotLine.cs" />
     <Compile Include="TestCode\FakeWpfTextViewLine.cs" />
     <Compile Include="TestCode\FakeWpfTextView.cs" />
-    <Compile Include="CoveringTests\ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="CoveringTests\MainUserControl1.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="CoveringTests\MainUserControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="StatusBar\NotificationIcon.xaml">
       <SubType>Designer</SubType>
