--- a/Hosts/VS/CommonUI/CommonUI.csproj
+++ b/Hosts/VS/CommonUI/CommonUI.csproj
@@ -116,20 +116,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoveringTests\MainUserControl.xaml.cs">
+    <Compile Include="Margin\MainUserControl.xaml.cs">
       <DependentUpon>MainUserControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CoveringTests\ViewModel\CoveringTestViewModel.cs" />
-    <Compile Include="CoveringTests\ViewModel\MainViewModel.designtime.cs">
+    <Compile Include="Margin\ViewModel\CoveringTestViewModel.cs" />
+    <Compile Include="Margin\ViewModel\MainViewModel.cs" />
+    <Compile Include="Margin\ViewModel\MainViewModel.HostIdeActions.cs">
       <DependentUpon>MainViewModel.cs</DependentUpon>
     </Compile>
-    <Compile Include="CoveringTests\ViewModel\MainViewModel.GlyphInfo.cs">
-      <DependentUpon>MainViewModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CoveringTests\ViewModel\MainViewModel.HostIdeActions.cs">
-      <DependentUpon>MainViewModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CoveringTests\ViewModel\ViewModelLocator.cs" />
+    <Compile Include="Margin\ViewModel\ViewModelLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusBar\RunStateToIconTextConverter.cs" />
     <Compile Include="StatusBar\RunStateToIconColorConverter.cs" />
@@ -146,12 +141,11 @@
     <Compile Include="TestCode\FakeTextSnapshotLine.cs" />
     <Compile Include="TestCode\FakeWpfTextViewLine.cs" />
     <Compile Include="TestCode\FakeWpfTextView.cs" />
-    <Compile Include="CoveringTests\ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="CoveringTests\MainUserControl.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Margin\MainUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="StatusBar\NotificationIcon.xaml">
       <SubType>Designer</SubType>
@@ -165,18 +159,18 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="CoveringTests\Resources\actiongototest.png" />
-    <Resource Include="CoveringTests\Resources\actionstartwithdebug.png" />
-    <Resource Include="CoveringTests\Resources\actionstartwithoutdebug.png" />
-    <Resource Include="CoveringTests\Resources\testresultfailed.png" />
-    <Resource Include="CoveringTests\Resources\testresultpassed.png" />
-    <Resource Include="CoveringTests\Resources\testresultunknown.png" />
+    <Resource Include="Margin\Resources\actiongototest.png" />
+    <Resource Include="Margin\Resources\actionstartwithdebug.png" />
+    <Resource Include="Margin\Resources\actionstartwithoutdebug.png" />
+    <Resource Include="Margin\Resources\testresultfailed.png" />
+    <Resource Include="Margin\Resources\testresultpassed.png" />
+    <Resource Include="Margin\Resources\testresultunknown.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="CoveringTests\Resources\actionexpand.png" />
+    <Resource Include="Margin\Resources\actionexpand.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="CoveringTests\Resources\actioncollapse.png" />
+    <Resource Include="Margin\Resources\actioncollapse.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets" Condition="('$(Configuration)' != 'Debug') and Exists('..\..\..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets')" />
